# FedCast

./: CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: Gemfile  README.md  _config.yml  index.html  index.md
docs/_includes/: footer.html  social.html
docs/_layouts/: default.html
docs/assets/css/: custom.css
docs/docs/: index.md
docs/docs/api/: index.md
docs/docs/examples/: index.md
docs/tutorials/: 01-installation.md  02-first-experiment.md  README.md
fedcast/datasets/: dataset_network_traffic.py  dataset_sinus.py
fedcast/experiments/: basic_fedavg.py  grid_all.py
fedcast/federated_learning_strategies/: __init__.py
fedcast/telemetry/: mlflow_logger.py
tests/: test_dataset_ecg.py  test_dataset_eld.py  test_dataset_intel_iot.py  test_dataset_network_traffic.py  test_dataset_sinus.py  test_dataset_stocks.py  test_dataset_weather.py  test_datasets_general.py  test_feddyn.py  test_fedlama.py  test_fednova.py  test_fedopt.py  test_scaffold.py
tutorials/: README.md
tutorials/scripts/: first_experiment.py  verify_installation.py
